<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_foto_profile"
        android:layout_width="119dp"
        android:layout_height="127dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/text_view_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:drawablePadding="6dp"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_view_name"
        app:layout_constraintTop_toBottomOf="@+id/text_view_name"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/iv_foto_profile"
        app:layout_constraintTop_toBottomOf="@+id/iv_foto_profile"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/text_view_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="6dp"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_following"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/text_view_following"
        tools:text="@string/followers" />

    <TextView
        android:id="@+id/text_view_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:drawablePadding="6dp"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_foto_profile"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.23000002"
        tools:text="@string/following" />

    <TextView
        android:id="@+id/text_view_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="6dp"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_followers"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/text_view_followers"
        tools:text="@string/repository" />

    <TextView
        android:id="@+id/text_view_kantor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_baseline_home_work_24"
        android:drawablePadding="6dp"
        android:fontFamily="monospace"
        android:gravity="center_vertical"
        android:maxEms="18"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/text_view_alamat"
        app:layout_constraintTop_toBottomOf="@+id/text_view_alamat"
        tools:text="@string/company" />

    <TextView
        android:id="@+id/text_view_alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:drawableLeft="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="6dp"
        android:fontFamily="monospace"
        android:gravity="center_vertical"
        android:maxEms="18"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_view_username"
        app:layout_constraintTop_toBottomOf="@+id/text_view_username"
        tools:text="@string/alamat" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_kantor" />


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablayout"
        app:layout_constraintVertical_bias="0.0" />

<!--    <ToggleButton-->
<!--        android:id="@+id/favorite_button"-->
<!--        android:layout_width="35dp"-->
<!--        android:layout_height="35dp"-->
<!--        android:layout_marginEnd="24dp"-->
<!--        android:layout_marginBottom="24dp"-->
<!--        android:background="@drawable/favorite_button"-->
<!--        android:focusable="false"-->
<!--        android:focusableInTouchMode="false"-->
<!--        android:textColorHint="#050505"-->
<!--        android:textOff=""-->
<!--        android:textOn=""-->
<!--        app:layout_constraintBottom_toTopOf="@+id/tablayout"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

    <ProgressBar
        android:id="@+id/loading_bar"
        style="?android:progressBarStyle"
        android:layout_width="55dp"
        android:layout_height="34dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tablayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/followingtxt"
        app:layout_constraintBottom_toBottomOf="@+id/iv_foto_profile"
        app:layout_constraintStart_toEndOf="@+id/iv_foto_profile"
        app:layout_constraintTop_toTopOf="@+id/iv_foto_profile" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/followerstxt"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/repositorytxt"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fav_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:focusable="false"
        android:clickable="false"
        android:backgroundTint="@color/orange"
        android:layout_marginBottom="16dp"
        app:borderWidth="0dp"
        app:tint="#FF5050"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24"
        android:contentDescription="@string/favoriteadd" />


</androidx.constraintlayout.widget.ConstraintLayout>